# oftonf

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  run.sh
cmake/: FindClang.cmake  FindLLVM.cmake  FindLibClang.cmake
examples/: simple.cc
src/: CMakeLists.txt  main.cc
src/consumer/: consumer.cc
src/finder/: finder.h
src/transformer/: field.cc  field.h  functioncalltransformer.cc  functioncalltransformer.h  transformer.h
src/utils/: utils.cc
